--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==3.0.0
 Flask-CORS==4.0.0
-easyocr==1.7.0
-Pillow>=10.2.0
+paddleocr==2.7.0
+paddlepaddle==2.5.2
 opencv-python==4.8.1.78
+numpy==1.24.3
